added ads_response.json and ads_response.csv to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 access_token.txt
 response.json
 response.csv
-test_data.json
-test_data.csv
+ads_response.json
+ads_response.csv
 utils.cpython-311.pyc
